# IG-fmri-snp

./: README.md  pyproject.toml  requirements.txt  run.sh
data/: README.md
docs/: gwas_workflow.md  pipeline_overview.md
legacy/: ADNI_DEG_Preprocess.py  ADNI_deg_covariates.py  AnMerge_deg.py  anmerge_mri_gene_pergeneFDR.py  preprocess_fmri.sh
notebooks/: Image_genetic_analysis.ipynb
scripts/fmri/: compute_connectivity_msdl.py  preprocess_fmri_fsl.sh
scripts/fmriphenotype/: get_resilience_edge.py
scripts/gwas/: extract_top_snps.py  make_genotype_matrix.py  prepare_pheno_covar.py  run_gwas_plink.sh
scripts/imggenetics/: brainnetviewer_export.py  export_vep_inputs.py
scripts/transcriptomics/: adni_deg_covariates.py  adni_expression_preprocess.py  anmerge_deg_covariates.py
scripts/validation/: anmerge_prep_expr_mri.py
src/imggenetics/: __init__.py  __main__.py  cli.py  fdr.py  io.py  model.py  pipeline.py  preprocess.py  utils.py
src/imggenetics.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
