[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imggenetics"
version = "0.1.0"
description = "Automated SNP×Subtype OLS interaction pipeline for connectivity phenotypes"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "statsmodels>=0.14",
  "tqdm>=4.66",
]

[project.scripts]
imggenetics = "imggenetics.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["imggenetics"]
