[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imggenetics"
version = "0.2.1"
description = "Imaging-genetics utilities for subtype-aware rs-fMRI connectivity analysis (IG-fmri-snp)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "statsmodels>=0.14",
  "tqdm>=4.66",
  "scipy>=1.10",
  "openpyxl>=3.1",
  "nibabel>=5.2",
  "nilearn>=0.10",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "seaborn>=0.13",
]

[project.scripts]
imggenetics = "imggenetics.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["imggenetics"]
